Add Home page and fix issues within code

--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,48 @@
   <script src="../common/patternbot.js"></script>
 </head>
 <body>
+  <script type="application/json" data-pattern="header/skip-links"></script>
+  <script type="application/json" data-pattern="navigation/tool-bars"></script>
+
   <script type="application/json" data-pattern="header/header"></script>
+
+  <script type="application/json" data-pattern="banner/home-banner"></script>
+
+  <main>
+    <div class="grid island-2">
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card"></script>
+      </div>
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card"></script>
+      </div>
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card"></script>
+      </div>
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card"></script>
+      </div>
+    </div>
+  </main>
+
+  <script type="application/json" data-pattern="navigation/section"></script>
+
+  <section>
+    <div class="grid island-2">
+      <div class="unit [ xs-1 l-1 xl-1-3 ] ">
+        <script type="application/json" data-pattern="card/basic-card"></script>
+      </div>
+      <div class="unit [ xs-1 l-1 xl-1-3 ] ">
+        <script type="application/json" data-pattern="card/basic-card"></script>
+      </div>
+      <div class="unit [ xs-1 l-1 xl-1-3 ] ">
+        <script type="application/json" data-pattern="card/basic-card"></script>
+      </div>
+    </div>
+  </section>
+  <script type="application/json" data-pattern="navigation/section-illustration"></script>
+
+  <script type="application/json" data-pattern="footer/footer"></script>
 
 </body>
 </html>
