--- a/patterns/banner/home-banner.html
+++ b/patterns/banner/home-banner.html
@@ -15,13 +15,15 @@
 <body>
 
   <main id="main" role="main" tabindex="0">
-    <div class="banner relative">
+    <div class="banner">
       <div class="home-text-image-banner" aria-details="banner-image-of-one-of-our-rubik's-cube">
-        <div class="wrapper gutter-2 home-text-box-banner absolute pin-tl">
-          <h1 class="pad-t-2">Home of the Rubik</h1>
-          <p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        </div>
       </div>
+      <div class="gutter-2 home-text-box-banner island">
+        <div class="wrapper">
+          <h1 class="banner-h1 tenamega push-0">Home of the Rubik</h1>
+          <p class="banner-p">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+        </div>
     </div>
   </main>
 
