--- a/patterns/buttons/buttons.html
+++ b/patterns/buttons/buttons.html
@@ -13,14 +13,16 @@
 
 </head>
 <body>
+ <div class="island">
+   <a class="btn"><span aria-label="More">More<i></i></span></a>
+   <a class="btn btn-save pad-t"><span aria-label="Save">Save<i></i></span></a>
+   <a class="btn btn-cart push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
+   <a class="btn btn-drop pad-t"><span aria-label="Drop">drop<i></i></span></a>
+   <button type="submit" name="button">
+     <a class="btn btn-filter pad-t"><span aria-label="Filter">filter<i></i></span></a>
+   </button>
+ </div>
 
-  <a class="btn"><span aria-label="More">More<i></i></span></a>
-  <a class="btn btn-save pad-t"><span aria-label="Save">Save<i></i></span></a>
-  <a class="btn btn-cart push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
-  <a class="btn btn-drop pad-t"><span aria-label="Drop">drop<i></i></span></a>
-  <button type="submit" name="button">
-    <a class="btn btn-filter pad-t"><span aria-label="Filter">filter<i></i></span></a>
-  </button>
 
 
 </body>
