--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -15,16 +15,16 @@
 </head>
 <body>
 
-  <div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b-2">
-    <div class="unit [ xs-1 s-1 m-1-2 l-1-2] push">
+  <div class="grid cart-item main-card gutter-1-2 pad-t pad-b">
+    <div class="unit [ xs-1 ] push">
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
-    <div class="unit [ xs-1 s-1 m-1-2 l-1-2] gutter">
-      <h3 class="pad-b-1-2 push-1-2">Item Name</h3>
-      <p class="push-1-2">$$$$</p>
+    <div class="unit [ xs-1 ] island">
+      <p class="push-0 zetta bold">Item Name</p>
+      <p class="push-1-2 italic">$$$$</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-      <a class="btn btn-save pad-t"><span aria-label="Save">Save<i></i></span></a>
-      <a class="btn btn-cart push-r-2 pad-t"><span aria-label="Cart">Cart<i></i></span></a>
+      <a class="btn btn-save"><span aria-label="Save">Save<i></i></span></a>
+      <a class="btn btn-cart push-r-2"><span aria-label="Cart">Cart<i></i></span></a>
     </div>
   </div>
 
