--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -13,28 +13,22 @@
 
 </head>
 <body>
-
-    <ul class="skip-links">
-      <li><a href="#main"> Jump to Main Content</a></li>
-      <li><a href="#nav">Jump to Navigation bar</a></li>
-    </ul>
-
     <header class="text-center" role="banner" id="id" tabindex="0">
       <div class="header-logo grid grid-middle valign-middle text-center island-2">
-        <div class="unit [ xs-1-3 ] text-right">
+        <div class="unit [ xs-1-2 ] text-right gutter">
           <i class="icon i-64">
             <img src="../../images/logo-64.svg" alt="">
           </i>
         </div>
-        <div class="unit [ xs-2-3 ] text-left">
+        <div class="unit [ xs-1-2] text-left">
           <span class="tena bold rubikas-logo-text">Rubikas</span>
         </div>
       </div>
       <div class="nav-bar">
         <input type="checkbox" class="nav-check hide-custom-input" id="nav-check">
-        <div class="input-toggle">
+        <div class="input-toggle relative">
           <label class="link-box toggle-btn icon i-64 absolute pin-tr" for="nav-check">
-            <i class="icon i-64 absolute toggle-click"><svg><use xlink:href="../../images/icons.svg#toggle"></use></svg></i>
+            <i class="icon i-64 absolute pin-c toggle-click"><svg><use xlink:href="../../images/icons.svg#toggle"></use></svg></i>
             <i class="icon i-64 absolute toggle-clicked"><svg><use xlink:href="../../images/icons.svg#toggle-down"></use></svg></i>
           </label>
         </div>
