--- a/patterns/navigation/filter.html
+++ b/patterns/navigation/filter.html
@@ -43,7 +43,7 @@
             </ul>
 
           </div>
-          <button type="submit" name="button">
+          <button class="gutter" type="submit" name="button">
             <a class="btn btn-drop pad-t"><span aria-label="Filter">Filter<i></i></span></a>
           </button>
 
