--- a/patterns/navigation/page-navigation.html
+++ b/patterns/navigation/page-navigation.html
@@ -30,7 +30,7 @@
       </li>
 
       <li>
-        <a class="link-box valign-top current" href="#">
+        <a class="link-box valign-top current-page" href="#">
           <p class="push-0 page-available peta gutter-1-2">2</p>
         </a>
       </li>
