--- a/patterns/navigation/tool-bars.html
+++ b/patterns/navigation/tool-bars.html
@@ -22,7 +22,7 @@
       </ul>
 
     </div>
-    <div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-right gutter-2">
+    <div class="unit [xs-1 s-1-2 m-1-2 l-1-2] text-right gutter">
       <ul class="list-group-inline push-none">
         <li><a class="link-box inline" href="#">EN - English</a></li>
         <li class="icon i-34 relative">
