--- a/patterns/card/icon-card.html
+++ b/patterns/card/icon-card.html
@@ -17,8 +17,8 @@
   <div class="main-card">
     <div class="grid gutter-1-2 pad-t-1-2">
 
-      <div class="unit [ xs-1 s-1 l-1-4]">
-        <ul class="grid list-group relative">
+      <div class="unit [ xs-1 s-1 l-1-4] ">
+        <ul class="grid list-group relative gutter-2">
 
           <li class="unit [ s-1 ] relative img-display-main">
             <div class="embed embed-3by2 push" id="img-div">
@@ -56,7 +56,7 @@
     </div>
 
     <div class="unit [ xs-1 s-1 l-3-4] gutter pad-t-1-2">
-      <h2 class="info-item push-1-2 zetta">Item Name</h2>
+      <p class="info-item push-1-2 zetta">Item Name</p>
       <div class="info-container pad-t-1-4 pad-b-1-4">
         <ul class="list-group-inline push-0">
 
