--- a/patterns/card/info-card.html
+++ b/patterns/card/info-card.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Buttons</title>
+  <title>Info - Cards</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -15,22 +15,19 @@
 </head>
 <body>
 
-  <div class="main-card">
-    <a class="link-box" href="#">
-    <div class="grid">
-      <div class="unit [ xs-1 s-1 m-1 l-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
-        <img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
-      </div>
-      <div class="unit [ xs-1 s-1 m-1 l-1 ] ">
-        <div class="text-info pad-t-2 gutter">
-          <h2 class="zetta push-0">New Release</h2>
-          <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-             Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-             Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <a class="btn"><span aria-label="More">More<i></i></span></a>
+  <div class="basic-card pad-b">
+    <a class="basic-card-link link-box" href="#">
+      <div class="grid">
+        <div class="unit [ xs-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
+          <img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
+        </div>
+        <div class="unit [ xs-1 ] ">
+          <div class="text-info pad-t gutter">
+            <p class="zetta push-0 info-card-title bold">New Release</p>
+            <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+          </div>
         </div>
       </div>
-    </div>
     </a>
   </div>
 
