--- a/patterns/grid/1-grid-sizes.html
+++ b/patterns/grid/1-grid-sizes.html
@@ -28,7 +28,7 @@
 <body>
 
   <div class="patternbot-mq-display-wrap push patternbot-font-primary patternbot-color-body">
-  <ol class="patternbot-mq-display patternbot-list-group list-group push-0 pad-b" style="width: calc(0em + 40em); width: calc(25em + 40em); width: calc(38em + 40em); width: calc(60em + 40em); ">
+  <ol class="patternbot-mq-display patternbot-list-group list-group push-0 pad-b" style="width: calc(0em + 40em); width: calc(25em + 40em); width: calc(38em + 40em); width: calc(60em + 40em); width: calc(85em + 40em); ">
       <li style="padding-left: 0em">
         <div class="patternbot-mq-inner relative" >
           <dl class="patternbot-mq-list patternbot-list-group list-group-inline push-0 gutter-1-2 absolute micro" >
@@ -72,6 +72,18 @@
             <dd class="push-0">60em</dd>
             <dt class="push-0">Class prefix</dt>
             <dd class="push-0">l</dd>
+            <dt class="push-0">№ columns</dt>
+            <dd class="push-0">4</dd>
+          </dl>
+        </div>
+      </li>
+      <li style="padding-left: 85em">
+        <div class="patternbot-mq-inner relative" >
+          <dl class="patternbot-mq-list patternbot-list-group list-group-inline push-0 gutter-1-2 absolute micro" >
+            <dt class="push-0">Media query</dt>
+            <dd class="push-0">85em</dd>
+            <dt class="push-0">Class prefix</dt>
+            <dd class="push-0">xl</dd>
             <dt class="push-0">№ columns</dt>
             <dd class="push-0">4</dd>
           </dl>
@@ -322,6 +334,67 @@
             <li style="width: calc(100% / 4)">
               <div class="patternbot-grid-display-inner island-1-4" >
                 <code class="micro">.l-1-4</code>
+              </div>
+            </li>
+      </ol>
+
+    <hr class="patternbot-hr">
+    <h2 class="patternbot-font-primary patternbot-color-body giga normal">Sizes available at “xl”</h2>
+      <ol class="patternbot-grid-display " style="min-width: 320px; width: 85em">
+          <li style="width: 100%">
+            <div class="patternbot-grid-display-inner island-1-4" >
+              <code class="micro">.xl-1</code>
+            </div>
+          </li>
+      </ol>
+      <ol class="patternbot-grid-display " style="min-width: 320px; width: 85em">
+            <li style="width: calc(100% / 2)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-2</code>
+              </div>
+            </li>
+            <li style="width: calc(100% / 2)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-2</code>
+              </div>
+            </li>
+      </ol>
+      <ol class="patternbot-grid-display " style="min-width: 320px; width: 85em">
+            <li style="width: calc(100% / 3)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-3</code>
+              </div>
+            </li>
+            <li style="width: calc(100% / 3)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-3</code>
+              </div>
+            </li>
+            <li style="width: calc(100% / 3)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-3</code>
+              </div>
+            </li>
+      </ol>
+      <ol class="patternbot-grid-display push" style="min-width: 320px; width: 85em">
+            <li style="width: calc(100% / 4)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-4</code>
+              </div>
+            </li>
+            <li style="width: calc(100% / 4)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-4</code>
+              </div>
+            </li>
+            <li style="width: calc(100% / 4)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-4</code>
+              </div>
+            </li>
+            <li style="width: calc(100% / 4)">
+              <div class="patternbot-grid-display-inner island-1-4" >
+                <code class="micro">.xl-1-4</code>
               </div>
             </li>
       </ol>
