--- a/patterns/navigation/section.html
+++ b/patterns/navigation/section.html
@@ -2,7 +2,7 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title>Bread Crumbs</title>
+  <title>Section</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <link href="../../common/modules.css" rel="stylesheet">
   <link href="../../common/grid.css" rel="stylesheet">
@@ -10,16 +10,20 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans|Rubik:400,700" rel="stylesheet">
   <link href="navigation.css" rel="stylesheet">
+  <link href="buttons.css" rel="stylesheet">
 </head>
 <body>
 
-  <div class="grid grid-middle sections gutter">
-    <div class="unit [ xs-1 m-1-2 l-1-3 ]">
+  <div class="grid grid-middle sections gutter island">
+    <div class="unit [ xs-1 l-2-3 ] ">
       <img class="img-flex" src="http://placehold.it/640x480" alt="">
     </div>
-    <div class="unit [ xs-1 m-1-2 l-2-3 ] island">
-      <h2>That’s a Cube?</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="unit [ xs-1 l-1-3 ] island pad-t-2 pad-b-2">
+      <div class="wrapper">
+        <h2>That’s a Cube?</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <a class="btn"><span aria-label="More">More<i></i></span></a>
+      </div>
     </div>
   </div>
 </body>
