added products page

--- a/index.html
+++ b/index.html
@@ -1744,6 +1744,7 @@
             <li><a href="#sections--intro-text">Intro text</a></li>
             <li><a href="#sections--links-section">Links section</a></li>
             <li><a href="#sections--nav-checkout">Nav checkout</a></li>
+            <li><a href="#sections--products">Products</a></li>
         </ol>
       </nav>
   </div>
@@ -1974,6 +1975,125 @@
     &lt;/nav>
   &lt;/div>
 &lt;/nav>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+    <div class="pattern-details " id="sections--products" style="">
+        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
+          <h3 class="pattern-name tera push-1-8">Products</h3>
+            <ul class="list-group-inline gutter absolute pin-cr">
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="sections-products-code-sample">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-code"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="sections/products" hidden>
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-copy"></use></svg>
+                    </i>
+                  </button>
+                </li>
+                <li>
+                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/sections/products.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                    <i class="icon i-18">
+                      <svg><use xlink:href="#icon-pop-out"></use></svg>
+                    </i>
+                  </a>
+                </li>
+            </ul>
+        </div>
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/sections/products.html" scrolling="no" data-inject-css=" " ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="sections-products-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#sections-products-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="sections-products-code-sample-copy-chunk">&lt;div class="products-banner"&gt;
+  &lt;div class="grid pad-top">
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
+      &lt;div>
+        &lt;img class="img-flex product-1" src="../../images/img-1.jpg" aria-label="Image of flowers" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold">FLOWER 1&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right">$10&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
+      &lt;div>
+        &lt;img class="img-flex product-2" src="../../images/img-2.jpg" aria-label="IImage of flowers" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold">FLOWER 2&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right">$12-15&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+
+    &lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
+      &lt;div>
+        &lt;img class="img-flex product-3" src="../../images/img-4.jpg" aria-label="Image of flowers" alt="">
+      &lt;/div>
+      &lt;div class="grid pad-top-half">
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold">FLOWER 3&lt;/p>
+        &lt;/div>
+        &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+          &lt;p class="milli bold right">$11&lt;/p>
+        &lt;/div>
+      &lt;/div>
+    &lt;/div>
+  &lt;/div>
+&lt;/div>
+
+&lt;div class="unit xs-1 s-1 m-1-2 l-1-3 island-half">
+  &lt;div>
+    &lt;img class="img-flex product-4" src="../../images/img-3.jpg" aria-label="Image of flowers" alt="">
+  &lt;/div>
+  &lt;div class="grid pad-top-half">
+    &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+      &lt;p class="milli bold">FLOWER 4&lt;/p>
+    &lt;/div>
+    &lt;div class="unit xs-1-2 s-1-2 m-1-2 l-1-2">
+      &lt;p class="milli bold right">$9&lt;/p>
+    &lt;/div>
+  &lt;/div>
+&lt;/div>
 </pre></code>
             </div>
           </div>
