--- a/pages/home.html
+++ b/pages/home.html
@@ -10,14 +10,14 @@
   <script type="application/json" data-pattern="header/header"></script>
   <script type="application/json" data-pattern="banner/banner"></script>
 
-  <div class="grid pad-t pad-b">
-    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1">
+  <div class="grid island pad-t pad-b">
+    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-3">
       <script type="application/json" data-pattern="cards/product-card"></script>
     </div>
-    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1">
+    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-3">
       <script type="application/json" data-pattern="cards/product-card"></script>
     </div>
-    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1">
+    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-3">
       <script type="application/json" data-pattern="cards/product-card"></script>
     </div>
   </div>
