--- a/pages/products.html
+++ b/pages/products.html
@@ -8,5 +8,16 @@
 </head>
 <body>
 
+  <script type="application/json" data-pattern="header/header"></script>
+
+  <div class="island center">
+<script type="application/json" data-pattern="sections/products"></script>
+<script type="application/json" data-pattern="sections/products"></script>
+<script type="application/json" data-pattern="sections/products"></script>
+</div>
+
+  <div class="pad-t">
+    <script type="application/json" data-pattern="footer/footer"></script>
+  </div>
 </body>
 </html>
