--- a/patterns/sections/products.html
+++ b/patterns/sections/products.html
@@ -11,6 +11,7 @@
   <link href="../../common/theme.css" rel="stylesheet">
   <link href="../cards/cards.css" rel="stylesheet">
   <link href="../cards/basic-cards.html" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Black" rel="stylesheet">
   <link href="sections.css" rel="stylesheet">
 </head>
 
