--- a/index.html
+++ b/index.html
@@ -220,6 +220,16 @@
                   </div>
                 </a>
               </li>
+              <li role="presentation">
+                <a class="gutter pad-t-1-4 pad-b-1-4 block" role="tab" aria-controls="text-section" href="#text-section">
+                  <div class="relative">
+                    <span>Text section</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-active" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
           <li class="pad-t-1-2" role="presentation">
             <button class="nav-show-all gutter pad-t-1-4 pad-b-1-4 block kilo" id="patternbot-nav-show-all" aria-pressed="false" title="Show all patterns" aria-label="Show all patterns">
               <span class="nav-show-all-wrap relative block">Show all</span>
@@ -1259,11 +1269,47 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="footer-footer-code-sample-copy-chunk">&lt;footer class="list micro footer gutter-1-2" role="contentinfo" tabindex="0"&gt;
-  &lt;div class="footer wrapper">
-    &lt;small class="micro">Garden Life &#xA9; 2018 233 Garden street.&lt;/small>
+              <code><pre id="footer-footer-code-sample-copy-chunk">&lt;div class="footer"&gt;
+  &lt;div class="links pad-t-2 push">
+    &lt;ul class="list-group-inline island clearfix text-center">
+      &lt;li class="gutter milli bold">
+        &lt;a href="#">About&lt;/a>
+      &lt;/li>
+      &lt;li class="gutter milli bold text-center">
+        &lt;a href="#">Terms &amp; Conditions&lt;/a>
+      &lt;/li>
+      &lt;li class="gutter milli bold text-center">
+        &lt;a href="#">Privacy Policy&lt;/a>
+      &lt;/li>
+      &lt;li class="gutter milli bold text-center">
+        &lt;a href="#">Shipping info&lt;/a>
+      &lt;/li>
+      &lt;li class="gutter milli bold text-center">
+        &lt;a href="#">Contact&lt;/a>
+      &lt;/li>
+    &lt;/ul>
   &lt;/div>
-&lt;/footer>
+  &lt;div class="social-icons text-center inline-block">
+    &lt;li>
+      &lt;a href="#">
+          &lt;img class="img-s social-icon" src="../../images/icon-instagram.png" alt="">
+        &lt;/a>
+    &lt;/li>
+    &lt;li>
+      &lt;a href="#">
+          &lt;img class="img-s social-icon" src="../../images/icon-twitter.png" alt="">
+        &lt;/a>
+    &lt;/li>
+    &lt;li>
+      &lt;a href="#">
+          &lt;img class="img-s social-icon" src="../../images/icon-facebook.png" alt="">
+        &lt;/a>
+    &lt;/li>
+  &lt;/div>
+  &lt;div class="copyright">
+    &lt;p class="text-center micro">&#xA9;Gardenlife2018&lt;/p>
+  &lt;/div>
+&lt;/div>
 </pre></code>
             </div>
           </div>
@@ -1741,7 +1787,6 @@
     <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Sections</h2>
       <nav class="pattern-nav">
         <ol class="list-group-inline push-1-4 pad-b-1-4">
-            <li><a href="#sections--intro-text">Intro text</a></li>
             <li><a href="#sections--links-section">Links section</a></li>
             <li><a href="#sections--nav-checkout">Nav checkout</a></li>
             <li><a href="#sections--products">Products</a></li>
@@ -1749,73 +1794,13 @@
       </nav>
   </div>
 
+      <div class="pattern-desc milli island" >
+        <div class="max-length"><p>The links-section is where all the social media links will go.</p>
+</div>
+      </div>
 
   
 
-    <div class="pattern-details " id="sections--intro-text" style="">
-        <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
-          <h3 class="pattern-name tera push-1-8">Intro text</h3>
-            <ul class="list-group-inline gutter absolute pin-cr">
-                <li>
-                  <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="sections-intro-text-code-sample">
-                    <i class="icon i-18">
-                      <svg><use xlink:href="#icon-code"></use></svg>
-                    </i>
-                  </button>
-                </li>
-                <li>
-                  <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="sections/intro-text" hidden>
-                    <i class="icon i-18">
-                      <svg><use xlink:href="#icon-copy"></use></svg>
-                    </i>
-                  </button>
-                </li>
-                <li>
-                  <a class="btn center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/sections/intro-text.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
-                    <i class="icon i-18">
-                      <svg><use xlink:href="#icon-pop-out"></use></svg>
-                    </i>
-                  </a>
-                </li>
-            </ul>
-        </div>
-
-      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
-        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
-          <div class="resizeable-pattern relative" style="">
-            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
-            <iframe data-src="patterns/sections/intro-text.html" scrolling="no" data-inject-css=" " ></iframe>
-              <div class="resizeable-pattern-length">
-                <div class="resize-handle resize-handle-left" style="">
-                  <i class="icon i-18">
-                    <svg><use xlink:href="#icon-resize-handle" /></svg>
-                  </i>
-                </div>
-                <div class="resize-handle resize-handle-right" style="">
-                  <i class="icon i-18">
-                    <svg><use xlink:href="#icon-resize-handle" /></svg>
-                  </i>
-                </div>
-              </div>
-          </div>
-        </div>
-
-          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="sections-intro-text-code-sample" tabindex="-1">
-            <div class="pattern-code relative milli island-1-2" style="">
-              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#sections-intro-text-code-sample-copy-chunk" hidden>
-                <i class="icon i-18">
-                  <svg><use xlink:href="#icon-copy"></use></svg>
-                </i>
-              </button>
-              <code><pre id="sections-intro-text-code-sample-copy-chunk">&lt;div class="intro-section"&gt;
-  &lt;h1 class="push-1">This is an H1.&lt;/h1>
-  &lt;p>This is for talking about a product or other company information.&lt;/p>
-&lt;/div>
-</pre></code>
-            </div>
-          </div>
-      </div>
-    </div>
     <div class="pattern-details " id="sections--links-section" style="">
         <div class="pattern-toolbar pattern-toolbar-inner relative gutter pad-t-1-4 pad-b-1-4" style="">
           <h3 class="pattern-name tera push-1-8">Links section</h3>
@@ -2093,6 +2078,78 @@
       &lt;p class="milli bold right">$9&lt;/p>
     &lt;/div>
   &lt;/div>
+&lt;/div>
+</pre></code>
+            </div>
+          </div>
+      </div>
+    </div>
+
+</section>
+
+        <section class="pattern" id="text-section" role="tabpanel" hidden aria-hidden="true" style="">
+  <div class="pattern-toolbar gutter pad-t-1-4 pad-b-1-8 relative" style="">
+    <h2 class="pattern-name exa push-1-4" style="color: #00d4c4; font-family: &quot;Playfair Display&quot;, serif;">Text section</h2>
+        <ul class="list-group-inline gutter absolute pin-cr">
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-code-btn" title="Show code" aria-label="Show code" aria-pressed="false" aria-controls="text-section-text-section-code-sample">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-code"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <button class="center-contents-vertical pattern-tool-btn pattern-include-btn" title="Copy include" aria-label="Copy include" data-copy-include-pattern="text-section/text-section" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+            </li>
+            <li>
+              <a class="center-contents-vertical pattern-tool-btn pattern-pop-btn" href="patterns/text-section/text-section.html" target="_blank" title="Open pattern in a new tab" aria-label="Open pattern in a new tab">
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-pop-out"></use></svg>
+                </i>
+              </a>
+            </li>
+        </ul>
+  </div>
+
+
+  
+
+    <div class="pattern-details " id="text-section--text-section" style="">
+
+      <div class="pattern-examples pad-t-1-2 pad-b-1-2" style="">
+        <div class="gutter-2 pad-t-1-2 pad-b-1-2">
+          <div class="resizeable-pattern relative" style="">
+            <i class="icon i-32 patternbot-iframe-loading-gears absolute pin-c"><svg><use xlink:href="#patternbot-iframe-loading-gears"></use></svg></i>
+            <iframe data-src="patterns/text-section/text-section.html" scrolling="no" data-inject-css=" " ></iframe>
+              <div class="resizeable-pattern-length">
+                <div class="resize-handle resize-handle-left" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+                <div class="resize-handle resize-handle-right" style="">
+                  <i class="icon i-18">
+                    <svg><use xlink:href="#icon-resize-handle" /></svg>
+                  </i>
+                </div>
+              </div>
+          </div>
+        </div>
+
+          <div class="pattern-code-wrap gutter pad-t-1-2 pad-b-1-2" hidden aria-hidden="true" id="text-section-text-section-code-sample" tabindex="-1">
+            <div class="pattern-code relative milli island-1-2" style="">
+              <button class="center-contents-vertical pattern-tool-btn pattern-copy-btn absolute pin-tr" title="Copy code" aria-label="Copy code" data-clipboard-target="#text-section-text-section-code-sample-copy-chunk" hidden>
+                <i class="icon i-18">
+                  <svg><use xlink:href="#icon-copy"></use></svg>
+                </i>
+              </button>
+              <code><pre id="text-section-text-section-code-sample-copy-chunk">&lt;div class="intro-section"&gt;
+  &lt;h1>This is an H1.&lt;/h1>
+  &lt;p>This is for talking about a product or other company information.&lt;/p>
 &lt;/div>
 </pre></code>
             </div>
