--- a/patterns/banner/banner.html
+++ b/patterns/banner/banner.html
@@ -15,9 +15,7 @@
 <body>
   <body style="min-height: 600px;">
     <header class="relative banner">
-      <div class="absolute w-1 pin-bc island-2 banner-content text-center">
-        <h1 class="tera gutter">Get all the greenary you need here!</h1>
-        <p class="mega">Shop online to get all your gardening needs here at garden life! We sell tools, seeds and other gardening items you need to start your own.</p>
+      <div class="btn-1 absolute w-1 pin-bc island-2 banner-content text-center">
         <div>
           <a class="btn" href="#">Shop Now</a>
         </div>
