--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -12,11 +12,47 @@
   <link href="footer.css" rel="stylesheet">
 </head>
 <body>
-  <footer class="list micro footer gutter-1-2" role="contentinfo" tabindex="0">
-    <div class="footer wrapper">
-      <small class="micro">Garden Life © 2018 233 Garden street.</small>
+  <div class="footer">
+    <div class="links pad-t-2 push">
+      <ul class="list-group-inline island clearfix text-center">
+        <li class="gutter milli bold">
+          <a href="#">About</a>
+        </li>
+        <li class="gutter milli bold text-center">
+          <a href="#">Terms & Conditions</a>
+        </li>
+        <li class="gutter milli bold text-center">
+          <a href="#">Privacy Policy</a>
+        </li>
+        <li class="gutter milli bold text-center">
+          <a href="#">Shipping info</a>
+        </li>
+        <li class="gutter milli bold text-center">
+          <a href="#">Contact</a>
+        </li>
+      </ul>
     </div>
-  </footer>
+    <div class="social-icons text-center inline-block">
+      <li>
+        <a href="#">
+          <img class="img-s social-icon" src="../../images/icon-instagram.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="img-s social-icon" src="../../images/icon-twitter.png" alt="">
+        </a>
+      </li>
+      <li>
+        <a href="#">
+          <img class="img-s social-icon" src="../../images/icon-facebook.png" alt="">
+        </a>
+      </li>
+    </div>
+    <div class="copyright">
+      <p class="text-center micro">©Gardenlife2018</p>
+    </div>
+  </div>
 
 </body>
 </html>
