--- a/pages/home.html
+++ b/pages/home.html
@@ -9,7 +9,7 @@
 <body>
   <script type="application/json" data-pattern="header/header"></script>
   <script type="application/json" data-pattern="banner/banner"></script>
-
+  <script type="application/json" data-pattern="text-section/text-section"></script>
   <div class="grid island pad-t pad-b">
     <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-3">
       <script type="application/json" data-pattern="cards/product-card"></script>
