--- a/index.html
+++ b/index.html
@@ -1289,7 +1289,7 @@
       &lt;/li>
     &lt;/ul>
   &lt;/div>
-  &lt;div class="social-icons text-center inline-block">
+  &lt;div class="social-icons list-group-inline island clearfix text-center">
     &lt;li>
       &lt;a href="#">
           &lt;img class="img-s social-icon" src="../../images/icon-instagram.png" alt="">
