--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -32,7 +32,7 @@
         </li>
       </ul>
     </div>
-    <div class="social-icons text-center inline-block">
+    <div class="social-icons list-group-inline island clearfix text-center">
       <li>
         <a href="#">
           <img class="img-s social-icon" src="../../images/icon-instagram.png" alt="">
