Add new images to file and complete home.html

--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
               </button>
               <code><pre id="banner-home-banner-code-sample-copy-chunk">&lt;main id="main" role="main" tabindex="0"&gt;
   &lt;div class="banner">
-    &lt;div class="home-text-image-banner" aria-details="banner-image-of-one-of-our-rubik&apos;s-cube">
+    &lt;div class="home-text-image-banner banner-img-1 embed embed-4by3" aria-details="banner-image-of-one-of-our-rubik&apos;s-cube">
     &lt;/div>
     &lt;div class="gutter-2 home-text-box-banner island">
       &lt;div class="wrapper">
@@ -1044,7 +1044,7 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-basic-card-code-sample-copy-chunk">&lt;div class="grid cart-item main-card gutter-1-2 pad-t pad-b"&gt;
+              <code><pre id="card-basic-card-code-sample-copy-chunk">&lt;div class="grid cart-item main-card gutter-1-2 pad-t pad-b content-fill"&gt;
   &lt;div class="unit [ xs-1 ] push">
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
   &lt;/div>
@@ -1334,7 +1334,7 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-info-card-code-sample-copy-chunk">&lt;div class="basic-card pad-b"&gt;
+              <code><pre id="card-info-card-code-sample-copy-chunk">&lt;div class="basic-card pad-b content-fill"&gt;
   &lt;a class="basic-card-link link-box" href="#">
     &lt;div class="grid">
       &lt;div class="unit [ xs-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
@@ -1342,7 +1342,7 @@
       &lt;/div>
       &lt;div class="unit [ xs-1 ] ">
         &lt;div class="text-info pad-t gutter">
-          &lt;p class="zetta push-0 info-card-title bold">New Release&lt;/p>
+          &lt;h3 class="zetta push-0 info-card-title bold">New Release&lt;/h3>
           &lt;p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna&lt;/p>
         &lt;/div>
       &lt;/div>
