--- a/patterns/banner/home-banner.html
+++ b/patterns/banner/home-banner.html
@@ -16,7 +16,7 @@
 
   <main id="main" role="main" tabindex="0">
     <div class="banner">
-      <div class="home-text-image-banner" aria-details="banner-image-of-one-of-our-rubik's-cube">
+      <div class="home-text-image-banner banner-img-1 embed embed-4by3" aria-details="banner-image-of-one-of-our-rubik's-cube">
       </div>
       <div class="gutter-2 home-text-box-banner island">
         <div class="wrapper">
