--- a/patterns/card/info-card.html
+++ b/patterns/card/info-card.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="basic-card pad-b">
+  <div class="basic-card pad-b content-fill">
     <a class="basic-card-link link-box" href="#">
       <div class="grid">
         <div class="unit [ xs-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
@@ -23,7 +23,7 @@
         </div>
         <div class="unit [ xs-1 ] ">
           <div class="text-info pad-t gutter">
-            <p class="zetta push-0 info-card-title bold">New Release</p>
+            <h3 class="zetta push-0 info-card-title bold">New Release</h3>
             <p class="push-1-2">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
           </div>
         </div>
