--- a/pages/home.html
+++ b/pages/home.html
@@ -12,37 +12,64 @@
 
   <script type="application/json" data-pattern="header/header"></script>
 
-  <script type="application/json" data-pattern="banner/home-banner"></script>
+  <script type="application/json" data-pattern="banner/home-banner">{
+    ".home-text-image-banner[class]": "home-text-image-banner banner-img-3 embed embed-4by3"
+  }</script>
 
   <main>
-    <div class="grid island-2">
-      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
-        <script type="application/json" data-pattern="card/info-card"></script>
+    <div class="grid grid-stretch island-2">
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] unit-content-distribute pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card">{
+          "img[src]": "../images/multiple-rubik.jpg",
+          "h3": "New Releases",
+          "p": "A Whole new type of rubik introduced to our collection at Rubikas"
+        }</script>
       </div>
-      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
-        <script type="application/json" data-pattern="card/info-card"></script>
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] unit-content-distribute pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card">{
+          "img[src]": "../images/compete.jpg",
+          "h3" : "Get involved!"
+        }</script>
       </div>
-      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
-        <script type="application/json" data-pattern="card/info-card"></script>
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] unit-content-distribute pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card">{
+          "img[src]": "../images/wrench.jpg",
+          "h3": "Fixing the Cube",
+          "p": "Check out our list of manual of your rubik and get cracking. From our 2 by 2 to our hexagonal rubiks, we got the guide to help you through the steps necessary to master your cube."
+        }</script>
       </div>
-      <div class="unit [ xs-1 l-1-2 xl-1-4 ] pad-t pad-b">
-        <script type="application/json" data-pattern="card/info-card"></script>
+      <div class="unit [ xs-1 l-1-2 xl-1-4 ] unit-content-distribute pad-t pad-b">
+        <script type="application/json" data-pattern="card/info-card">{
+          "img[src]": "../images/chess.jpg",
+          "H3": "Collector's choice"
+        }</script>
       </div>
     </div>
   </main>
 
-  <script type="application/json" data-pattern="navigation/section"></script>
+  <script type="application/json" data-pattern="navigation/section">{
+    "img[src]" : "../images/rubik-two-by-two.png"
+  }</script>
 
   <section>
-    <div class="grid island-2">
-      <div class="unit [ xs-1 l-1 xl-1-3 ] ">
-        <script type="application/json" data-pattern="card/basic-card"></script>
+    <div class="grid island-2 grid-stretch">
+      <div class="unit [ xs-1 l-1 xl-1-3 ] unit-content-distribute">
+        <script type="application/json" data-pattern="card/basic-card">{
+          "img[src]": "../images/checkers-two.jpg",
+          "p": "Chess"
+        }</script>
       </div>
-      <div class="unit [ xs-1 l-1 xl-1-3 ] ">
-        <script type="application/json" data-pattern="card/basic-card"></script>
+      <div class="unit [ xs-1 l-1 xl-1-3 ] unit-content-distribute">
+        <script type="application/json" data-pattern="card/basic-card">{
+          "img[src]": "../images/jigsaw.jpg",
+          "p": "Puzzles"
+        }</script>
       </div>
-      <div class="unit [ xs-1 l-1 xl-1-3 ] ">
-        <script type="application/json" data-pattern="card/basic-card"></script>
+      <div class="unit [ xs-1 l-1 xl-1-3 ] unit-content-distribute">
+        <script type="application/json" data-pattern="card/basic-card">{
+          "img[src]": "../images/checkers.jpg",
+          "p": "Board Game"
+        }</script>
       </div>
     </div>
   </section>
