--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="grid cart-item main-card gutter-1-2 pad-t pad-b">
+  <div class="grid cart-item main-card gutter-1-2 pad-t pad-b content-fill">
     <div class="unit [ xs-1 ] push">
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
