--- a/pages/products.html
+++ b/pages/products.html
@@ -10,12 +10,11 @@
 
   <script type="application/json" data-pattern="header/header"></script>
 
-  <div class="island center">
+  <div class="grid island center">
     <script type="application/json" data-pattern="sections/products"></script>
     <script type="application/json" data-pattern="sections/products"></script>
     <script type="application/json" data-pattern="sections/products"></script>
   </div>
-
   <div class="pad-t">
     <script type="application/json" data-pattern="footer/footer"></script>
   </div>
