Fixed linking top script

--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Home • Garden life</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="../../common/patternbot.js"></script>
+  <script src="../common/patternbot.js"></script>
 </head>
 <body>
   <script type="application/json" data-pattern="header/header"></script>
