--- a/pages/products.html
+++ b/pages/products.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Products • Garden life</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="../../common/patternbot.js"></script>
+  <script src="../common/patternbot.js"></script>
 </head>
 <body>
 
